<resources>
    <string name="app_name">微赛小视频</string>
    <string name="main_tab_name_recommend">推荐</string>
    <string name="main_tab_name_competition">参赛</string>
    <string name="main_tab_name_vote">投票</string>
    <string name="main_tab_name_past">往期</string>
    <string name="main_tab_name_my">我的</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="state_loading_error">数据加载中&#8230;</string>
    <string name="state_submit">正在提交中&#8230;</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_loading_friend">数据初始化中…</string>
    <string name="error_view_loading_local_friend">获取附近的程序员中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="footer_type_loading">正在加载中…</string>
    <string name="footer_type_error">加载失败</string>
    <string name="footer_type_net_error">网络错误</string>
    <string name="footer_type_not_more">没有更多数据</string>
    <string name="gallery_save_file_not_have_external_storage_permission">没有外部存储权限!</string>
    <string name="gallery_save_file_not_have_external_storage">没有外部存储!</string>
    <string name="gallery_save_file_success">保存成功!</string>
    <string name="gallery_save_file_failed">存储失败!</string>
    <string name="image_select_opt_done">完成</string>
    <string name="image_select_opt_preview">预览</string>
    <string name="action_select">选择操作</string>
    <string name="title_icon_null">图像不存在，上传失败</string>
    <string name="title_update_fail_status">个人信息更新失败&#8230;</string>
    <string name="progress_submit">正在提交…</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="login_wx_label_name">微信登录</string>
    <string name="login_qq_label_name">QQ 登录</string>
    <string name="login_wb_label_name">微博登录</string>
    <string name="login_walk_around_label_name">随便逛逛 >></string>
    <string name="login_input_username_hint">手机号或邮箱</string>
    <string name="login_input_username_hint_error">请输入正确的手机号或邮箱&#8230;</string>
    <string name="login_hold_hint">记住密码</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_register_hint">注册</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="register_sms_wait_hint">别激动,休息一下呗&#8230;</string>
    <string name="loading_image">正在准备图片...</string>
    <string name="register_done_hint">完成</string>
    <string name="register_man_hint">男士</string>
    <string name="register_female_hint">女士</string>
    <string name="retrieve_pwd_step_hint">下一步</string>
    <string name="retrieve_pwd_email_label_one">邮箱用户找回密码，请</string>
    <string name="retrieve_pwd_email_label"><a>点击这里</a></string>
    <string name="reset_pwd_hint">请输入至少六位新密码</string>
    <string name="register_username_error">用户名太长&#8230;</string>
    <string name="hint_password">密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="user_hint_login">点击头像登录</string>
    <string name="reset_pwd_label">重置密码</string>
    <string name="retrieve_pwd_label">找回密码</string>
    <string name="reset_pwd_submit">确认</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="reset_success_hint">密码重置成功</string>
    <string name="send_sms_code_success_hint">已成功发送验证码</string>
    <string name="register_success_hint">注册成功</string>
    <string name="share_hint">抱歉,您未安装该应用,不能分享&#8230;</string>
    <string name="login_hint">抱歉,您未安装该应用,不能登录&#8230;</string>
    <string name="login_wechat_hint">正在启动微信中&#8230;</string>
    <string name="login_tencent_hint">正在启动QQ中&#8230;</string>
    <string name="login_weibo_hint">正在启动微博中&#8230;</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="tv_my_score">积分 0</string>
    <string name="zero">0</string>
    <string name="event_type_outline">线下活动</string>
    <string name="actionbar_title_setting">设置</string>
    <string name="actionbar_title_about">关于我们</string>
    <string name="actionbar_title_domain">个性域名</string>
    <string name="actionbar_title_payment_password">支付密碼</string>
    <string name="actionbar_title_modify_payment_password">修改支付密碼</string>
    <string name="actionbar_title_forgot_payment_password">忘记支付密码</string>
    <string name="actionbar_title_open_fingerprint_payment">开启指纹支付</string>
    <string name="actionbar_title_help_center">帮助中心</string>
    <string name="actionbar_title_information">个人资料</string>
    <string name="actionbar_title_subject">选择主题</string>
    <string name="actionbar_title_social_platforms">社交平台</string>
    <string name="actionbar_title_ranking">排行榜</string>
    <string name="actionbar_title_ranking_rule">规则</string>
    <string name="actionbar_title_balance_detail">详情</string>
    <string name="actionbar_title_balance_withdraw_money">取现</string>
    <string name="set_options_social_platforms">社交平台</string>
    <string name="set_options_location">定位</string>
    <string name="set_options_timezone">时区</string>
    <string name="set_options_signature">个性签名</string>
    <string name="set_options_email_alert">邮件提醒</string>
    <string name="set_options_payment_password">支付密码</string>
    <string name="set_options_help">帮助中心</string>
    <string name="set_options_about">关于我们</string>
    <string name="payment_password_input_old_password">请输入旧密码</string>
    <string name="payment_password_input_authenticate_password">请输入认证手机号码以获取验证码</string>
    <string name="payment_password_input_payment_password">请输入支付密码</string>
    <string name="vs_site">官网</string>
    <string name="know_more">了解更多</string>
    <string name="copyright">© 2018 channelfix.com All rights reserved.</string>
    <string name="message_click_hint">Message click event</string>
    <string name="message_long_click_hint">Message long press event</string>
    <string name="avatar_click_hint">Avatar click event</string>
    <string name="rationale_record_voice">This app needs access microphone to record voice.</string>
    <string name="rationale_photo">This app needs access photos.</string>
    <string name="rationale_camera">This app needs access camera.</string>
    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>
    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>
    <string name="share_to">分享</string>
    <string name="platform_sina">微博</string>
    <string name="platform_wechat_circle">朋友圈</string>
    <string name="platform_wechat">微信</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_tweet">动弹</string>
    <string name="platform_browser">浏览器</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_picture">长图分享</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_download">保存图片</string>
    <string name="platform_preview">预览</string>
    <string name="share_title">微赛小视频分享</string>
    <string name="commit">提交修改</string>
    <string name="identity_officialMember">identity_officialMember</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="permissions_camera_error">相机无法完成初始化,请正确授权。</string>
    <string name="pre_step">上一步</string>
    <string name="cash">现金</string>
    <string name="present">礼品</string>
    <string name="search">搜索</string>
    <string name="please_input">请输入%1$s</string>
    <string name="available_cover">可选封面</string>
    <string name="local_cover">+使用本地图片</string>
    <string name="game_rule_title">比赛规则</string>
    <string name="add_award_btn">+添加奖项</string>
    <string name="award_method_hint">请输入领奖方法</string>
    <string name="way_to_accept_award">领奖方法</string>
    <string name="select_hint">请选择</string>
    <string name="input_hint1">请输入</string>
    <string name="grade">等级</string>
    <string name="start_immediately">立即开始</string>
    <string name="start_immediately_hint">比赛创建完成，即刻开启</string>
    <string name="start_time_hint">到达预设时间，比赛立即开始</string>
    <string name="start_time">开始时间</string>
    <string name="start_entries_hint">在预设开始时间前，作品数量\n达到预设数量，比赛立即开始</string>
    <string name="start_entries">开始作品数量</string>
    <string name="time_of_stage_hint">各阶段持续时间设置</string>
    <string name="stage_open">开放阶段</string>
    <string name="stage_open_duration">开放阶段时长</string>
    <string name="stage_qualify">资格赛阶段</string>
    <string name="duration">持续时长</string>
    <string name="capability_upload_entry">是否允许上传作品</string>
</resources>