<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <!--头部-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/bar_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingBottom="@dimen/divider"
            android:background="@drawable/bg_frame_bottom_white">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/mark_text_color"
                android:text="@string/pickerview_cancel"
                android:textSize="@dimen/font_big"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_big"
                android:textColor="@android:color/black"
                android:text="@string/grade"/>

            <TextView
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textColor="@color/mark_text_color"
                android:text="@string/pickerview_submit"
                android:textSize="@dimen/font_big"/>

        </LinearLayout>

        <NumberPicker android:id="@+id/number_picker"
            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"/>

    </LinearLayout>

</FrameLayout>
