<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="EditAwardActivity"
            type="com.vs.vipsai.publish.activitys.EditAwardActivity" />
    </data>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:textColor="@color/mark_text_color"
            android:gravity="center"
            android:textSize="@dimen/font_normal"
            android:paddingVertical="@dimen/divider"
            android:background="@drawable/bg_frame_top_bottom_white"
            android:text="@string/add_award_btn"
            android:onClick="@{EditAwardActivity.addAwardItem}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_8"
            android:paddingHorizontal="@dimen/padding_horizontal"
            android:background="@drawable/bg_frame_top_bottom_white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_8"
                android:gravity="center_vertical"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/font_normal"
                android:text="@string/way_to_accept_award"
                android:background="@drawable/bg_frame_bottom_white"/>

            <com.vs.library.widget.FunctionBar
                android:id="@+id/award_method"
                style="@style/Function_bar_as_editor_style"
                android:paddingBottom="@dimen/padding_8"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_small"
                android:hint="@string/award_method_hint"
                android:paddingHorizontal="0dp"
                app:isRequestField="true"/>

        </LinearLayout>

    </LinearLayout>
</layout>

